cap02